{
  "version": 4,
  "terraform_version": "1.2.4",
  "serial": 21,
  "lineage": "0130db2e-554b-e8d1-af53-02eb2ee5b9b2",
  "resources": [
    {
      "module": "module.ent_web_alb",
      "mode": "managed",
      "type": "aws_lb",
      "name": "application_load_balancer",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:us-east-2:633489328820:loadbalancer/app/ent-web-alb/8d977fd091b7c38a",
            "arn_suffix": "app/ent-web-alb/8d977fd091b7c38a",
            "desync_mitigation_mode": "defensive",
            "dns_name": "ent-web-alb-1116741673.us-east-2.elb.amazonaws.com",
            "drop_invalid_header_fields": false,
            "enable_cross_zone_load_balancing": true,
            "enable_deletion_protection": false,
            "enable_http2": true,
            "enable_tls_version_and_cipher_suite_headers": false,
            "enable_waf_fail_open": false,
            "enable_xff_client_port": false,
            "id": "arn:aws:elasticloadbalancing:us-east-2:633489328820:loadbalancer/app/ent-web-alb/8d977fd091b7c38a",
            "idle_timeout": 60,
            "internal": false,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "ent-web-alb",
            "preserve_host_header": false,
            "security_groups": [
              "sg-47a17232"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-273c686b"
              },
              {
                "subnet_id": "subnet-6d75c206"
              }
            ],
            "subnets": [
              "subnet-273c686b",
              "subnet-6d75c206"
            ],
            "vpc_id": "vpc-3a9b1451",
            "xff_header_processing_mode": "append",
            "zone_id": "Z3AADJGX6KTTL2"
          }
        }
      ]
    },
    {
      "module": "module.ent_web_alb",
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "application_listener",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:us-east-2:633489328820:listener/app/ent-web-alb/8d977fd091b7c38a/51377b1fe46c44cc",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:us-east-2:633489328820:targetgroup/ent-web-tg/caee8c35c241cb46",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-2:633489328820:listener/app/ent-web-alb/8d977fd091b7c38a/51377b1fe46c44cc",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:us-east-2:633489328820:loadbalancer/app/ent-web-alb/8d977fd091b7c38a",
            "port": 80,
            "protocol": "HTTP",
            "ssl_policy": "",
            "tags": null,
            "tags_all": {},
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.ent_web_alb.aws_lb.application_load_balancer",
            "module.ent_web_alb.aws_lb_target_group.application_target_group"
          ]
        }
      ]
    },
    {
      "module": "module.ent_web_alb",
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "application_target_group",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:us-east-2:633489328820:targetgroup/ent-web-tg/caee8c35c241cb46",
            "arn_suffix": "targetgroup/ent-web-tg/caee8c35c241cb46",
            "connection_termination": false,
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 5,
                "interval": 30,
                "matcher": "200",
                "path": "/",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 5,
                "unhealthy_threshold": 2
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-2:633489328820:targetgroup/ent-web-tg/caee8c35c241cb46",
            "ip_address_type": "ipv4",
            "lambda_multi_value_headers_enabled": false,
            "load_balancing_algorithm_type": "round_robin",
            "load_balancing_cross_zone_enabled": "use_load_balancer_configuration",
            "name": "ent-web-tg",
            "port": 8080,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "target_failover": [
              {
              }
            ],
            "target_type": "instance",
            "vpc_id": "vpc-3a9b1451"
          }
        }
      ]
    },
    {
      "module": "module.push_web_alb",
      "mode": "managed",
      "type": "aws_lb",
      "name": "application_load_balancer",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:us-east-2:633489328820:loadbalancer/app/push-web-alb/4b1f8f70c65c8e08",
            "arn_suffix": "app/push-web-alb/4b1f8f70c65c8e08",
            "desync_mitigation_mode": "defensive",
            "dns_name": "push-web-alb-946524933.us-east-2.elb.amazonaws.com",
            "drop_invalid_header_fields": false,
            "enable_cross_zone_load_balancing": true,
            "enable_deletion_protection": false,
            "enable_http2": true,
            "enable_tls_version_and_cipher_suite_headers": false,
            "enable_waf_fail_open": false,
            "enable_xff_client_port": false,
            "id": "arn:aws:elasticloadbalancing:us-east-2:633489328820:loadbalancer/app/push-web-alb/4b1f8f70c65c8e08",
            "idle_timeout": 60,
            "internal": false,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "push-web-alb",
            "preserve_host_header": false,
            "security_groups": [
              "sg-47a17232"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-273c686b"
              },
              {
                "subnet_id": "subnet-6d75c206"
              }
            ],
            "subnets": [
              "subnet-273c686b",
              "subnet-6d75c206"
            ],
            "vpc_id": "vpc-3a9b1451",
            "xff_header_processing_mode": "append",
            "zone_id": "Z3AADJGX6KTTL2"
          }
        }
      ]
    },
    {
      "module": "module.push_web_alb",
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "application_listener",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:us-east-2:633489328820:listener/app/push-web-alb/4b1f8f70c65c8e08/5723b7319f1db0fb",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:us-east-2:633489328820:targetgroup/push-web-tg/d3973aa73dcfff1c",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-2:633489328820:listener/app/push-web-alb/4b1f8f70c65c8e08/5723b7319f1db0fb",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:us-east-2:633489328820:loadbalancer/app/push-web-alb/4b1f8f70c65c8e08",
            "port": 80,
            "protocol": "HTTP",
            "ssl_policy": "",
            "tags": null,
            "tags_all": {},
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.push_web_alb.aws_lb.application_load_balancer",
            "module.push_web_alb.aws_lb_target_group.application_target_group"
          ]
        }
      ]
    },
    {
      "module": "module.push_web_alb",
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "application_target_group",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:us-east-2:633489328820:targetgroup/push-web-tg/d3973aa73dcfff1c",
            "arn_suffix": "targetgroup/push-web-tg/d3973aa73dcfff1c",
            "connection_termination": false,
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 5,
                "interval": 30,
                "matcher": "200",
                "path": "/",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 5,
                "unhealthy_threshold": 2
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-2:633489328820:targetgroup/push-web-tg/d3973aa73dcfff1c",
            "ip_address_type": "ipv4",
            "lambda_multi_value_headers_enabled": false,
            "load_balancing_algorithm_type": "round_robin",
            "load_balancing_cross_zone_enabled": "use_load_balancer_configuration",
            "name": "push-web-tg",
            "port": 8080,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "target_failover": [
              {
              }
            ],
            "target_type": "instance",
            "vpc_id": "vpc-3a9b1451"
          }
        }
      ]
    }
  ]
}